Change referral field label to 'Referral Source' for clarity

--- a/web/templates/entry_forms/profile.html
+++ b/web/templates/entry_forms/profile.html
@@ -235,7 +235,7 @@
         
         <div class="form-row-full">
             <div class="form-group">
-                <label for="referral_source">How did you hear about this practice?</label>
+                <label for="referral_source">Referral Source</label>
                 <input type="text" id="referral_source" name="referral_source" 
                        value="{{ profile.referral_source if profile else '' }}"
                        placeholder="e.g., Referral, Online search, Insurance directory">
