--- a/web/static/css/add_edit_link_group.css
+++ b/web/static/css/add_edit_link_group.css
@@ -55,7 +55,7 @@
     border-radius: 0.25rem;
     font-size: 0.75rem;
     font-weight: 500;
-    color: white;
+    color: #374151;
 }
 
 .search-result .client-name {
