--- a/web/static/css/manage_links.css
+++ b/web/static/css/manage_links.css
@@ -117,7 +117,7 @@
     border-radius: 0.25rem;
     font-size: 0.75rem;
     font-weight: 500;
-    color: white;
+    color: #374151;
     white-space: nowrap;
 }
 
