--- a/web/templates/entry_forms/communication.html
+++ b/web/templates/entry_forms/communication.html
@@ -40,7 +40,7 @@
             <div class="form-group">
                 <label>Date *</label>
                 <div id="comm-date-picker"></div>
-                <input type="hidden" id="date" name="date" value="{% if is_edit %}{{ '%04d-%02d-%02d' | format(comm_year, comm_month, comm_day) }}{% endif %}" required>
+                <input type="hidden" id="date" name="date" value="{% if is_edit %}{{ '%04d-%02d-%02d' | format(comm_year, comm_month, comm_day) }}{% else %}{{ today }}{% endif %}" required>
             </div>
             <div class="form-group">
                 <label>Time</label>
