--- a/web/templates/entry_forms/upload.html
+++ b/web/templates/entry_forms/upload.html
@@ -40,7 +40,7 @@
             <div class="form-group">
                 <label>Date *</label>
                 <div id="upload-date-picker"></div>
-                <input type="hidden" id="date" name="date" value="{% if is_edit %}{{ '%04d-%02d-%02d' | format(upload_year, upload_month, upload_day) }}{% endif %}" required>
+                <input type="hidden" id="date" name="date" value="{% if is_edit %}{{ '%04d-%02d-%02d' | format(upload_year, upload_month, upload_day) }}{% else %}{{ today }}{% endif %}" required>
             </div>
             <div class="form-group">
                 <label>Time</label>
