Refactor: Extract shared file upload JS to file-upload.js
- Created file-upload.js with 8 shared functions (~150 lines)
- Removed duplicate code from communication.js, upload.js, item.js
- Net reduction: ~280 lines of duplicate code eliminated
- Templates now include file-upload.js before their own JS

--- a/web/templates/entry_forms/upload.html
+++ b/web/templates/entry_forms/upload.html
@@ -9,6 +9,7 @@
 
 {% block extra_js %}
 <script src="{{ url_for('static', filename='js/pickers.js') }}"></script>
+<script src="{{ url_for('static', filename='js/file-upload.js') }}"></script>
 <script src="{{ url_for('static', filename='js/upload.js') }}"></script>
 {% endblock %}
 
