--- a/web/templates/entry_forms/item.html
+++ b/web/templates/entry_forms/item.html
@@ -267,6 +267,7 @@
 
 {% block extra_js %}
 <script src="{{ url_for('static', filename='js/pickers.js') }}"></script>
+<script src="{{ url_for('static', filename='js/file-upload.js') }}"></script>
 <script src="{{ url_for('static', filename='js/item.js') }}"></script>
 {% endblock %}
 
