Add linked members' file numbers to scheduler notes
- When selecting Couples/Family/Group format, automatically adds
  'Couples session with: 20251213-CC, 20251213-DC' to notes
- Updates dynamically when changing format
- Removes previous note when switching back to Individual

--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -194,7 +194,8 @@
         "individual": {{ individual_duration }},
         "consultation": {{ consultation_duration }},
         "linkGroups": {{ link_group_durations | tojson }}
-    }
+    },
+    "linkGroupMembers": {{ link_group_members | tojson }}
 }
 </script>
 
