--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -60,9 +60,9 @@
         <!-- Modality and Format -->
         <div class="two-column-grid">
             <div class="form-group">
-                <label for="modality">Modality</label>
-                <select id="modality" name="modality">
-                    <option value="">Not specified</option>
+                <label for="modality">Modality *</label>
+                <select id="modality" name="modality" required>
+                    <option value="">Select modality...</option>
                     <option value="in-person">In-Person</option>
                     <option value="videoconference">Videoconference</option>
                     <option value="telephone">Telephone</option>
@@ -70,8 +70,8 @@
             </div>
             
             <div class="form-group">
-                <label for="format">Format</label>
-                <select id="format" name="format">
+                <label for="format">Format *</label>
+                <select id="format" name="format" required>
                     <option value="individual">Individual</option>
                     <option value="couples">Couples</option>
                     <option value="family">Family</option>
@@ -91,14 +91,15 @@
         <!-- Duration and Repeat side by side -->
         <div class="two-column-grid">
             <div class="form-group">
-                <label for="duration">Duration (minutes)</label>
+                <label for="duration">Duration (minutes) *</label>
                 <input type="number" 
                        id="duration" 
                        name="duration" 
                        value="{{ individual_duration }}" 
-                       min="15" 
+                       min="1" 
                        max="180" 
-                       step="5">
+                       step="5"
+                       required>
             </div>
             <div class="form-group">
                 <label for="repeat">Repeat</label>
