Fix: Format dropdown defaults to 'Select format...' like session.html, add format validation

--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -72,6 +72,7 @@
             <div class="form-group">
                 <label for="format">Format *</label>
                 <select id="format" name="format">
+                    <option value="">Select format...</option>
                     <option value="individual">Individual</option>
                     <option value="couples">Couples</option>
                     <option value="family">Family</option>
